# fundsp-rack

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  render_wav.rs  synth_with_effects.rs
src/: error.rs  lib.rs  metrics.rs  params.rs
src/effects/: builder.rs  chain.rs  mod.rs  registry.rs  serialize.rs  sidechain.rs  smoothing.rs
src/effects/builtin/: distortion.rs  dynamics.rs  eq.rs  filters.rs  lofi.rs  mod.rs  modulation.rs  other.rs  spatial.rs  time.rs
src/effects/preset/: mastering.rs  mixing.rs  mod.rs
src/soundfont/: manager.rs  mod.rs  synth_adapter.rs
src/synth/: builder.rs  envelope.rs  lfo.rs  mod.rs  poly.rs  preset.rs  registry.rs
src/synth/preset/: drums.rs  mod.rs
src/synth/synths/: ambient.rs  analog.rs  basic.rs  bass.rs  bells.rs  detuned.rs  fm.rs  keys.rs  leads.rs  mod.rs  modulated.rs  noise.rs  pads.rs  physical.rs  tech.rs
